<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TWOH Maps v2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="checkin_hint_nama">Nama Lokasi</string>
    <string name="checkin_hint_sex">Sex</string>
    <string name="checkin_hint_dob">DOB</string>
    <string name="checkin_hint_group">Group</string>
    <string name="checkin_hint_info">Info</string>    

	<string name="checkin_label_nama">Nama Lokasi : %s</string>
    <string name="checkin_label_sex">Sex : %s</string>
    <string name="checkin_label_dob">DOB : %s</string>
    <string name="checkin_label_group">Group : %s</string>
    <string name="checkin_label_info">Info : %s</string>
    
    <string name="bt_save">Save</string>
    <string name="bt_cancel">Cancel</string>
    
</resources>
