<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/tv_koordinat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        />
    <EditText
        android:id="@+id/et_nama" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_nama"
        />
    <EditText
		android:id="@+id/et_dob" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_dob" 
        />        
    <EditText
		android:id="@+id/et_sex" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_sex" 
        />
    <EditText
		android:id="@+id/et_group" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_group" 
        />
    <EditText
		android:id="@+id/et_info" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_info" 
        />
    <EditText
		android:id="@+id/et_info2" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_info" 
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        >
		<Button
            android:id="@+id/bt_checkin_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel" 
            />
        <Button
            android:id="@+id/bt_checkin_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_save" 
            />
    </LinearLayout>
</LinearLayout>
