<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/tv_koordinat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        />
    <TextView
        android:id="@+id/tv_nama" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_nama"
        />
    <TextView
		android:id="@+id/tv_dob" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_dob" 
        />        
    <TextView
		android:id="@+id/tv_sex" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_sex" 
        />
    <TextView
		android:id="@+id/tv_group" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_group" 
        />
    <TextView
		android:id="@+id/tv_info" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_info" 
        />
    <TextView
		android:id="@+id/tv_info2" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_hint_info" 
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        >
		<Button
            android:id="@+id/bt_checkin_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@android:string/ok" 
            />        
    </LinearLayout>
</LinearLayout>
